chore: pre-PR automated healing (lint:fix + build:json)